sigh, too long since last commit. first pass at saved colors option, plus fixed bugs in determining default color from markup and checking text field on blur. also updated ux to show spectrums all along instead of gradually revealing them.

--- a/less/color-picker.less
+++ b/less/color-picker.less
@@ -48,6 +48,25 @@
           transition: border linear 0.2s, box-shadow linear 0.2s;
 }
 
+.tab-borders-shadows (@radius: 4px,@width: 1px,@color: @border_gray,@style: solid) {
+	border-top:@width @style @color;
+	border-right:@width @style @color;
+	border-left:@width @style @color;
+	 -webkit-border-top-left-radius: @radius;
+	-webkit-border-top-right-radius: @radius;
+	     -moz-border-radius-topleft: @radius;
+	    -moz-border-radius-topright: @radius;
+           border-top-left-radius: @radius;
+	        border-top-right-radius: @radius;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+     -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+       -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+          transition: border linear 0.2s, box-shadow linear 0.2s;
+}
+
 .two-color-spectrum (@start: @white, @stop: @black) {
   background-image: -webkit-gradient(linear, left top, right top, color-stop(0.0, @start), color-stop(1.0, @stop));
   background-image: -moz-linear-gradient(left center, @start 0%, @stop 100%);
@@ -95,9 +114,10 @@ body {
 
 .color-menu {
   padding:5px 0px; /*overwriting bootstrap default */
+	min-width: 330px;
 	
-	@media only screen and (max-width: 767px) {
-		left:-190px
+	@media screen and (max-width: 767px) {
+		left:-190px;
 	}
 	
 	.color-preview {
@@ -128,7 +148,7 @@ body {
 		}
 
 		&.indigo {
-		  background-color:@indigo
+		  background-color:@indigo;
 		}
 
 		&.violet {
@@ -144,23 +164,20 @@ body {
 		}
 	}
 	li > a {
-	  padding: 5px 6px; /*overwriting bootstrap default */
-	  cursor: default;
+	  padding: 5px 15px; /*overwriting bootstrap default */
 		min-height:25px;
-		background-color:#fff;
 		&:hover {
 		  background-color: #eee;
 		  color: #333;
-			background-image: none;
 		}
 	}
 	.btn {
 		margin: 0px 5px;
 		.borders-shadows!important; /*overwriting the bootstrap styles for button groups to not have all rounded corners */
-		.color-select {
+		&.color-select {
 			height:22px;
-			padding-top:0px;
-			margin-top:1px;
+			padding:0px 5px;
+			margin-top:0px;
 		}
 	}
 }
@@ -171,8 +188,6 @@ body {
 	margin:0px;
 }
 
-
-
 .color-label {
   vertical-align:middle;
   margin:0px;
@@ -180,19 +195,15 @@ body {
   cursor:pointer;
 }
 
-
-
-
 /* color gradients */
 
 .color-box {
   height:20px;
   width:@color-box-width;
-  display:none;
   position:absolute;
-  right:5px;
+  left:120px;
   .borders-shadows;
-	margin-top:1px;
+	cursor:pointer;
 }
 
 /* selector box */
@@ -243,8 +254,67 @@ body {
   .two-color-spectrum(@black,@bw_midpoint);
 	.highlight-band {
 		left:0px;
-		border: 2px solid #808080
+		border: 2px solid #808080;
 	}
 }
 
+/* tabbed navigation */
+
+.color-menu-tabs {
+	padding:5px;
+	font-size: 12px;
+	color: #333;
+	margin-bottom:3px;
+	span {
+		position:relative;
+		top:3px;
+		margin:5px;
+	}
+	a {
+		color: #333;
+		text-decoration:none;
+		padding:5px;
+		border-left:1px solid #fff;
+		border-right:1px solid #fff;
+		cursor:pointer;
+		&:hover {
+		.tab-borders-shadows;
+		}
+	}
+	.active {
+		a {
+		background-color: #fff;
+		background-image: none;
+		border-bottom:1px solid #fff;
+		.tab-borders-shadows;
+		&:hover {
+			background-color: #fff;
+			background-image: none;
+			border-bottom:1px solid #fff;
+		}
+		}
+	}
+}
+
+.active-content {
+	display: block;
+}
+
+.inactive-content {
+	display:none;
+}
+
+/*** saved colors tab ***/
+
+.savedColors-content {
+	width:300px!important;
+	padding:5px 15px;
+	white-space:normal;
+}
+
+.saved-color-col {
+	position:relative;
+	left:-15px;
+	float:left;
+}
 
